# sena

./: README.md  pyproject.toml
examples/filters/: div.py
sena/: __init__.py  context.py  filter.py
sena/di/: __init__.py  scope.py
sena/utils/: function.py  painter.py  typefuck.py
